--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,10 @@ terraform.tfvars
 *.auto.tfvars
 !*.auto.tfvars.example
 
+# Terraform provider binaries and cache
+.terraform/
+.terraform.lock.hcl
+
 # ===========================================
 # Lambda & AWS
 # ===========================================
