--- a/simple-lambda/package.json
+++ b/simple-lambda/package.json
@@ -2,6 +2,9 @@
   "name": "safemate-simple-lambda",
   "version": "1.0.0",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.859.0",
+    "@aws-sdk/lib-dynamodb": "^3.859.0",
+    "@aws-sdk/client-kms": "^3.859.0",
     "@hashgraph/sdk": "^2.71.1"
   }
 }
