Fix Lambda 502 error: Replace Hedera SDK with mock wallet creation
- Temporarily comment out @hashgraph/sdk imports to resolve 502 errors
- Implement mock Hedera wallet generation for testing
- Maintain all AWS service integrations (DynamoDB, KMS, Cognito)
- Update Lambda function to version 2.2.1 for preprod environment
- Add comprehensive error handling and debugging logs
- Store operator credentials in DynamoDB for future real integration
- Create deployment package without problematic dependencies

Fixes: 502 Bad Gateway errors in wallet creation
Environment: Preprod
Status: Ready for testing with mock wallets

--- a/apps/web/safemate/.env
+++ b/apps/web/safemate/.env
@@ -2,6 +2,8 @@
 # Last Updated: September 2025 - Post Migration
 # Status: Successfully Migrated from Dev
 # Migration Issues Resolved: Resource conflicts handled, CloudFront deployed
+# API Gateway IDs Fixed: All preprod APIs now correctly configured
+# Frontend Deployed: September 17, 2025 - Fixed API Gateway connectivity issues
 VITE_COGNITO_REGION=ap-southeast-2
 VITE_COGNITO_USER_POOL_ID=ap-southeast-2_pMo5BXFiM
 VITE_COGNITO_CLIENT_ID=1a0trpjfgv54odl9csqlcbkuii
@@ -14,11 +16,12 @@ VITE_DEBUG_MODE=false
 VITE_HEDERA_NETWORK=testnet
 
 # API Endpoints (Pre-Production)
-VITE_ONBOARDING_API_URL=https://ogxunodkn1.execute-api.ap-southeast-2.amazonaws.com/preprod
-VITE_VAULT_API_URL=https://062uk9bkqc.execute-api.ap-southeast-2.amazonaws.com/preprod
-VITE_WALLET_API_URL=https://vjwk1lk6oj.execute-api.ap-southeast-2.amazonaws.com/preprod
-VITE_HEDERA_API_URL=https://1yais7r0mh.execute-api.ap-southeast-2.amazonaws.com/preprod
-VITE_GROUP_API_URL=https://rlyxo9c27f.execute-api.ap-southeast-2.amazonaws.com/preprod
+VITE_ONBOARDING_API_URL=https://ol212feqdl.execute-api.ap-southeast-2.amazonaws.com/preprod
+VITE_VAULT_API_URL=https://fg85dzr0ag.execute-api.ap-southeast-2.amazonaws.com/preprod
+VITE_WALLET_API_URL=https://9t9hk461kh.execute-api.ap-southeast-2.amazonaws.com/preprod
+VITE_HEDERA_API_URL=https://2kwe2ly8vh.execute-api.ap-southeast-2.amazonaws.com/preprod
+VITE_GROUP_API_URL=https://3r08ehzgk1.execute-api.ap-southeast-2.amazonaws.com/preprod
+VITE_DIRECTORY_API_URL=https://e3k7nfvzab.execute-api.ap-southeast-2.amazonaws.com/preprod
 
 # Lambda Function Names (Pre-Production)
 VITE_USER_ONBOARDING_FUNCTION=preprod-safemate-user-onboarding
