--- a/apps/web/safemate/package.json
+++ b/apps/web/safemate/package.json
@@ -43,18 +43,26 @@
         "@typescript-eslint/parser": "^8.34.1",
         "@vitejs/plugin-react": "^4.4.1",
         "@vitejs/plugin-react-swc": "^4.0.1",
+        "assert": "^2.1.0",
         "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.1",
         "eslint": "^9.29.0",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "https-browserify": "^1.0.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
+        "os-browserify": "^0.3.0",
+        "path-browserify": "^1.0.1",
         "prettier": "^3.6.0",
         "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
+        "util": "^0.12.5",
         "vite": "^6.3.5"
     }
 }
